--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/anitawlosek/habitica-avatar-manifest#readme",
   "devDependencies": {
     "@types/node": "^24.7.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
