--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.1-alpha",
   "description": "Preprocessed, structured Habitica avatar data including sprites, items, and metadata, ready for use in apps and frontend projects.",
   "main": "src/index.ts",
+  "types": "src/types/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "types": "./src/types/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsx ./src/index.ts"
   },
