--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "type": "module",
   "scripts": {
-    "build": "tsx ./src/index.ts"
+    "generate": "tsx ./src/index.ts"
   },
   "repository": {
     "type": "git",
