--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "type": "module",
   "scripts": {
+    "generate:all-images": "tsx ./src/index.ts --all-images",
     "generate": "tsx ./src/index.ts"
   },
   "repository": {
@@ -27,7 +28,12 @@
   "homepage": "https://github.com/anitawlosek/habitica-avatar-manifest#readme",
   "devDependencies": {
     "@types/node": "^24.7.2",
+    "@types/probe-image-size": "^7.2.5",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "p-limit": "^7.2.0",
+    "probe-image-size": "^7.2.3"
   }
 }
