--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -22,6 +22,6 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add output/*.json
+          git add output/**/*.json
           git commit -m "Update content JSONs [skip ci]" || echo "No changes"
           git push
